feat : added download file

--- a/html/home.html
+++ b/html/home.html
@@ -16,7 +16,7 @@
         <header class="border-b border-purple-800 bg-black bg-opacity-50 backdrop-blur-md">
             <nav class="container mx-auto px-4 py-4">
                 <div class="flex items-center justify-between">
-                    <a href="/" class="text-purple-400 text-3xl font-bold transition-colors duration-300 hover:text-purple-300">DocVision</a>
+                    <a href="/" class="text-purple-400 text-3xl font-bold transition-colors duration-300 hover:text-purple-300">ScanVision</a>
                     
                     <button id="menu-toggle" class="md:hidden text-purple-400 focus:outline-none">
                         <svg class="w-6 h-6" fill="none" stroke="currentColor" viewBox="0 0 24 24">
@@ -56,11 +56,11 @@
                 <section class="mb-24">
                     <div class="grid md:grid-cols-2 gap-12 items-center">
                         <div class="space-y-8">
-                            <h1 class="text-4xl md:text-5xl lg:text-6xl font-bold text-white">Advanced Document <span class="text-transparent bg-clip-text bg-gradient-to-r from-purple-400 to-pink-600">Vision Filter</span></h1>
-                            <p class="text-lg md:text-xl text-gray-300">Harness the power of AI to analyze, filter, and extract insights from your documents with unparalleled accuracy and speed.</p>
+                            <h1 class="text-4xl md:text-5xl lg:text-6xl font-bold text-white">Document <span class="text-transparent bg-clip-text bg-gradient-to-r from-purple-400 to-pink-600">Vision Filter</span></h1>
+                            <p class="text-lg md:text-xl text-gray-300">A tool to enhance document readability with customizable filters.</p>
                             <div class="flex flex-wrap gap-4">
-                                <a href="#" class="px-6 py-3 bg-purple-600 text-white rounded-md hover:bg-purple-700 transition-colors duration-300 transform hover:scale-105">Get Started</a>
-                                <a href="#" class="px-6 py-3 border border-purple-400 text-purple-400 rounded-md hover:bg-purple-400 hover:text-black transition-colors duration-300 transform hover:scale-105">Learn More</a>
+                                <a href="/docs/list" class="px-6 py-3 bg-purple-600 text-white rounded-md hover:bg-purple-700 transition-colors duration-300 transform hover:scale-105">Get Started</a>
+                                <a href="https://nier.fandom.com/wiki/NieR:Automata" target="_blank" class="px-6 py-3 border border-purple-400 text-purple-400 rounded-md hover:bg-purple-400 hover:text-black transition-colors duration-300 transform hover:scale-105">Learn More</a>
                             </div>
                         </div>
 
@@ -78,7 +78,7 @@
                             </div>
                             <div class="grid grid-cols-3 gap-4 mt-6">
                                 <div class="text-center p-4 bg-purple-800 bg-opacity-50 rounded-lg transition-transform duration-300 hover:scale-105">
-                                    <div class="text-3xl mb-2">🔍</div>
+                                    <div class="text-3xl mb-2">⌨️</div>
                                     <p class="text-purple-200">Text</p>
                                 </div>
                                 <div class="text-center p-4 bg-purple-800 bg-opacity-50 rounded-lg transition-transform duration-300 hover:scale-105">
@@ -96,29 +96,29 @@
 
                 <section class="py-16 bg-gray-900 bg-opacity-50 rounded-3xl backdrop-blur-lg">
                     <div class="container mx-auto px-4 max-w-6xl">
-                    <h2 class="text-3xl md:text-4xl font-bold text-center mb-12 text-white">Our <span class="text-transparent bg-clip-text bg-gradient-to-r from-purple-400 to-pink-600">Features</span></h2>
-                    <div class="grid grid-cols-1 sm:grid-cols-2 lg:grid-cols-4 gap-6">
-                        <div class="bg-purple-900 bg-opacity-50 p-6 rounded-xl transition-transform duration-300 hover:scale-105">
-                            <div class="text-4xl mb-4">🚀</div>
-                            <h3 class="text-2xl font-bold text-purple-300 mb-2">Lightning Fast</h3>
-                            <p class="text-gray-300">Process documents in seconds, not minutes.</p>
+                        <h2 class="text-3xl md:text-4xl font-bold text-center mb-12 text-white">Our <span class="text-transparent bg-clip-text bg-gradient-to-r from-purple-400 to-pink-600">Features</span></h2>
+                        <div class="grid grid-cols-1 sm:grid-cols-2 lg:grid-cols-4 gap-6">
+                            <div class="bg-purple-900 bg-opacity-50 p-6 rounded-xl transition-transform duration-300 hover:scale-105">
+                                <div class="text-4xl mb-4">🔤</div>
+                                <h3 class="text-2xl font-bold text-purple-300 mb-2">OCR Recognition</h3>
+                                <p class="text-gray-300">Extract text from scanned images and documents with high accuracy.</p>
+                            </div>
+                            <div class="bg-purple-900 bg-opacity-50 p-6 rounded-xl transition-transform duration-300 hover:scale-105">
+                                <div class="text-4xl mb-4">🎨</div>
+                                <h3 class="text-2xl font-bold text-purple-300 mb-2">Custom Filters</h3>
+                                <p class="text-gray-300">Apply various filters to enhance document readability or style.</p>
+                            </div>
+                            <div class="bg-purple-900 bg-opacity-50 p-6 rounded-xl transition-transform duration-300 hover:scale-105">
+                                <div class="text-4xl mb-4">🖋️</div>
+                                <h3 class="text-2xl font-bold text-purple-300 mb-2">Text Recognition</h3>
+                                <p class="text-gray-300">Identify and highlight key sections of text for better document analysis.</p>
+                            </div>
+                            <div class="bg-purple-900 bg-opacity-50 p-6 rounded-xl transition-transform duration-300 hover:scale-105">
+                                <div class="text-4xl mb-4">🔍</div>
+                                <h3 class="text-2xl font-bold text-purple-300 mb-2">Document Search</h3>
+                                <p class="text-gray-300">Easily search for and find relevant information within your documents.</p>
+                            </div>
                         </div>
-                        <div class="bg-purple-900 bg-opacity-50 p-6 rounded-xl transition-transform duration-300 hover:scale-105">
-                            <div class="text-4xl mb-4">🎯</div>
-                            <h3 class="text-2xl font-bold text-purple-300 mb-2">High Accuracy</h3>
-                            <p class="text-gray-300">AI-powered analysis for precise results.</p>
-                        </div>
-                        <div class="bg-purple-900 bg-opacity-50 p-6 rounded-xl transition-transform duration-300 hover:scale-105">
-                            <div class="text-4xl mb-4">🔒</div>
-                            <h3 class="text-2xl font-bold text-purple-300 mb-2">Secure & Private</h3>
-                            <p class="text-gray-300">Your documents are safe with end-to-end encryption.</p>
-                        </div>
-                        <div class="bg-purple-900 bg-opacity-50 p-6 rounded-xl transition-transform duration-300 hover:scale-105">
-                            <div class="text-4xl mb-4">🔧</div>
-                            <h3 class="text-2xl font-bold text-purple-300 mb-2">Customizable</h3>
-                            <p class="text-gray-300">Tailor the filters to your specific needs.</p>
-                        </div>
-                    </div>
                     </div>
                 </section>
             </div>
@@ -127,11 +127,11 @@
         <footer class="border-t border-purple-800 py-8 bg-black bg-opacity-50 backdrop-blur-md">
             <div class="container mx-auto px-4">
                 <div class="flex flex-col md:flex-row justify-between items-center gap-4">
-                    <p class="text-gray-400">&copy; 2024 DocVision. All rights reserved.</p>
+                    <p class="text-gray-400">&copy; 2024 ScanVision. All rights reserved.</p>
                     <div class="flex gap-6">
-                        <a href="#" class="text-purple-300 hover:text-purple-100 transition-colors duration-300">Privacy Policy</a>
-                        <a href="#" class="text-purple-300 hover:text-purple-100 transition-colors duration-300">Terms of Service</a>
-                        <a href="#" class="text-purple-300 hover:text-purple-100 transition-colors duration-300">FAQ</a>
+                        <a href="https://fruitninja.fandom.com/wiki/Fruit_Ninja_Wiki:Privacy_policy" class="text-purple-300 hover:text-purple-100 transition-colors duration-300">Privacy Policy</a>
+                        <a href="https://halfbrick.helpshift.com/hc/en/6-fruit-ninja/faq/149-terms-of-service/" class="text-purple-300 hover:text-purple-100 transition-colors duration-300">Terms of Service</a>
+                        <a href="https://gamefaqs.gamespot.com/ps4/168677-nier-automata/faqs" class="text-purple-300 hover:text-purple-100 transition-colors duration-300">FAQ</a>
                     </div>
                     <div class="flex gap-4">
                         <a href="https://www.instagram.com/stevenlie_41/" class="text-2xl transition-transform duration-300 hover:scale-110" target="_blank">
