feat: separate HTML and JS

--- a/html/document.html
+++ b/html/document.html
@@ -83,7 +83,7 @@
                         </div>
                         <div class="p-4">
                             <div class="flex justify-between items-start mb-2">
-                                <h3 class="text-lg font-semibold">{{ doc.name }}</h3>
+                                <h3 class="text-lg font-semibold whitespace-nowrap max-w-full overflow-hidden text-ellipsis">{{ doc.name }}</h3>
                                 <span class="text-xs text-purple-300 bg-purple-900/30 px-2 py-1 rounded">{{ doc.images.count()}} page</span>
                             </div>
                             <div class="flex items-center text-sm text-purple-300 mb-4">
@@ -111,108 +111,16 @@
         </div>
     </main>
 
-    <script>
-        toastr.options = {
-            "closeButton": true,
-            "debug": false,
-            "newestOnTop": true,
-            "progressBar": true,
-            "positionClass": "toast-top-right",
-            "preventDuplicates": false,
-            "showDuration": "300",
-            "hideDuration": "1000",
-            "timeOut": "5000",
-            "extendedTimeOut": "1000",
-            "showEasing": "swing",
-            "hideEasing": "linear",
-            "showMethod": "fadeIn",
-            "hideMethod": "fadeOut"
-        };
-
-        {% with messages = get_flashed_messages(with_categories=true) %}
-            {% if messages %}
-                    {% for category, message in messages %}
-                        toastr["{{ category }}"]("{{ message }}");
-                    {% endfor %}
-            {% endif %}
-        {% endwith %}
-
-        document.getElementById('menu-toggle').addEventListener('click', function() {
-            document.getElementById('menu').classList.toggle('hidden');
-        });
-        const onEdit = (docId) => {
-            window.location.href = `/docs/${docId}`;
-        };
-
-        
-
-        const uploadArea = document.querySelector('.upload-area');
-        const fileInput = document.getElementById('file-upload');
-
-        uploadArea.addEventListener('click', () => {
-            fileInput.click();
-        });
-
-        uploadArea.addEventListener('dragover', (e) => {
-            e.preventDefault();
-            uploadArea.classList.add('border-purple-500/50');
-        });
-
-        uploadArea.addEventListener('dragleave', (e) => {
-            e.preventDefault();
-            uploadArea.classList.remove('border-purple-500/50');
-        });
-
-        uploadArea.addEventListener('drop', (e) => {
-            e.preventDefault();
-            uploadArea.classList.remove('border-purple-500/50');
-            const files = e.dataTransfer.files;
-            handleFiles(files);
-        });
-
-        fileInput.addEventListener('change', (e) => {
-            e.preventDefault();
-            const files = e.target.files;
-            handleFiles(files);
-        });
-
-        const handleFiles = (files) => {
-            ([...files]).forEach(uploadFile);
-        }
-
-        function uploadFile(files) {
-            toastr.info('Uploading files...');
-            console.log(files)
-            
-           const formData = new FormData();
-            formData.append('file', files);
-            fetch('/docs/upload', {
-                method: 'POST',
-                body: formData,
-            }).then(response => {
-                return response.json();
-            }).then(data => {
-                window.location.reload();
-                console.log('File uploaded successfully:', data);
-                window.location.href = '/docs/' + data['id'];
-            }).catch(error => {
-                console.error('Error:', error);
-                toastr.error('Failed to upload file.');
-            });
-        }
-
-        function onDelete(docId) {
-            fetch(`/docs/${docId}`, {
-                method: 'DELETE',
-            })
-            .then(response => response.json())
-            .then(data => {
-                window.location.reload();
-            })
-            .catch(error => {
-                console.error('Error:', error);
-            });
-        }
-    </script>
 </body>
+<script>
+    {% with messages = get_flashed_messages(with_categories=true) %}
+        {% if messages %}
+                {% for category, message in messages %}
+                    toastr["{{ category }}"]("{{ message }}");
+                {% endfor %}
+        {% endif %}
+    {% endwith %}
+</script>
+<script src="{{ url_for('static', filename='js/global.js') }}"></script>
+<script src="{{ url_for('static', filename='js/document.js') }}"></script>
 </html>
