--- a/html/ocr.html
+++ b/html/ocr.html
@@ -46,23 +46,9 @@
             </div>
         </div>
     </main>
+    <script src="{{ url_for('static', filename='js/global.js') }}"></script>
+
     <script>
-        toastr.options = {
-            "closeButton": true,
-            "debug": false,
-            "newestOnTop": true,
-            "progressBar": true,
-            "positionClass": "toast-top-right",
-            "preventDuplicates": false,
-            "showDuration": "300",
-            "hideDuration": "1000",
-            "timeOut": "5000",
-            "extendedTimeOut": "1000",
-            "showEasing": "swing",
-            "hideEasing": "linear",
-            "showMethod": "fadeIn",
-            "hideMethod": "fadeOut"
-        };
 
         const redirectToDocument = (docId) => {
             window.location.href = `/docs/${docId}`
