feat : crop image

--- a/html/login.html
+++ b/html/login.html
@@ -61,7 +61,7 @@
                                                 d="M5 13l4 4L19 7" />
                                         {% endif %}
                                     </svg>
-                                    <p class="text-sm">{{ message }}</p>
+                                    <p>{{ message }}</p>
                                 </div>
                             {% endfor %}
                         </div>
@@ -75,7 +75,7 @@
                 </button>
             </form>
 
-            <div class="text-center text-sm">
+            <div class="text-center">
                 <p class="text-gray-400">
                     Don't have an account?
                     <a href="/auth/register" class="text-docvision hover:underline ml-1 transition duration-300 ease-in-out">Create one now</a>
