--- a/html/register.html
+++ b/html/register.html
@@ -78,7 +78,7 @@
                                                 d="M5 13l4 4L19 7" />
                                         {% endif %}
                                     </svg>
-                                    <p class="text-sm">{{ message }}</p>
+                                    <p>{{ message }}</p>
                                 </div>
                             {% endfor %}
                         </div>
@@ -92,7 +92,7 @@
                 </button>
             </form>
 
-            <div class="text-center text-sm">
+            <div class="text-center">
                 <p class="text-gray-400">
                     Already have an account?
                     <a href="/auth/login" class="text-docvision hover:underline ml-1 transition duration-300 ease-in-out">Login now</a>
