--- a/html/home.html
+++ b/html/home.html
@@ -144,7 +144,7 @@
                             <img class="w-8 h-8" src="{{ url_for('static', filename='assets/linkedin.png') }}" alt="">
                         </a>
                         <a href="#" class="text-2xl transition-transform duration-300 hover:scale-110">
-                            <img class="w-8 h-8" src="{{ url_for('static', filename='assets/instagram.png') }}" alt="">
+                            <img class="w-8 h-8" src="{{ url_for('static', filename='assets/nierlogo.jpg') }}" alt="">
                         </a>
                     </div>
                 </div>
